--- a/MongoDB.Fake.Tests/MongoDB.Fake.Tests.csproj
+++ b/MongoDB.Fake.Tests/MongoDB.Fake.Tests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
