--- a/MongoDB.Fake/MongoDB.Fake.csproj
+++ b/MongoDB.Fake/MongoDB.Fake.csproj
@@ -9,9 +9,11 @@
     <PackageTags>mongo;mongodb;unit;test;fake</PackageTags>
   </PropertyGroup>
   <PropertyGroup>
-    <TargetFramework>netstandard1.5</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.6.0" />
   </ItemGroup>
 </Project>
