--- a/MongoDB.Fake/MongoDB.Fake.csproj
+++ b/MongoDB.Fake/MongoDB.Fake.csproj
@@ -11,6 +11,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
